# NekoSystem

./: CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  UPDATE_SUMMARY.md  ci.yml  code-quality.yml  dependencies.yml  release.yml
include/neko/system/: memoryinfo.hpp  platform.hpp
src/neko/system/: memoryinfo_linux.cpp  memoryinfo_macos.cpp  memoryinfo_windows.cpp  platform_unix.cpp  platform_windows.cpp
tests/: system_test.cpp
